--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -5,5 +5,21 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "trips/trip_activities" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "trips/trip_attendances" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "trips/trip_invitations" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
