--- a/app/views/trips/_trip_attendances.html.erb
+++ b/app/views/trips/_trip_attendances.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="trip_attendances_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "trips/trip_attendances_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
