Replace foreign key text inputs in likes with dropdowns

--- a/app/views/users/_user_likes_new_form.html.erb
+++ b/app/views/users/_user_likes_new_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.label :activity_id %>
 
     <!-- Input for activity_id start -->
-    <%= f.text_field :activity_id, class: "form-control" %>
+    <%= f.collection_select :activity_id, Activity.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for activity_id end -->
   </div>
   <!-- Label and input for activity_id end -->
