--- a/app/views/trips/_trip_invitations_new_form.html.erb
+++ b/app/views/trips/_trip_invitations_new_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.label :invited_user_id %>
 
     <!-- Input for invited_user_id start -->
-    <%= f.text_field :invited_user_id, class: "form-control" %>
+    <%= f.collection_select :invited_user_id, User.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for invited_user_id end -->
   </div>
   <!-- Label and input for invited_user_id end -->
