--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -34,6 +34,10 @@
       <div class="list-group list-group-flush">
         <%= render collection: @attendances, partial: "list_item", as: :attendance %>
       </div>
+      <div class="card-footer d-flex justify-content-center">
+        <%= paginate @attendances, theme: 'twitter-bootstrap-4' %>
+      </div>
+
     </div>
   </div>
 </div>
