--- a/app/views/activities/_card.html.erb
+++ b/app/views/activities/_card.html.erb
@@ -7,7 +7,11 @@
     <dl class="mb-1">
       <dt>Trip</dt>
       <!-- Display trip_id start -->
-      <dd><%= activity.trip_id %></dd>
+      <dd>
+        <% if @activity.trip.present? %>
+          <%= link_to activity.trip, activity.trip %>
+        <% end %>
+      </dd>
       <!-- Display trip_id end -->
 
       <dt>Name</dt>
