--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,9 @@
             Resources
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a href="/available_days" class="dropdown-item">
+              Available Days
+            </a>
             <a href="/likes" class="dropdown-item">
               Likes
             </a>
