--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -21,3 +21,9 @@
     <%= render partial: "trips/trip_invitations" %>
   </div>
 </div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "trips/trip_available_days" %>
+  </div>
+</div>
