--- a/app/views/attendances/_attendances_search_form.html.erb
+++ b/app/views/attendances/_attendances_search_form.html.erb
@@ -48,44 +48,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :created_at, "Trip Created at" %>
-    <div class="row">
-      <div class='col-md-6 mb-1'>
-        <div class='input-group date' id='tripgteqcreated_atPicker' data-target-input="nearest">
-          <%= f.text_field :trip_created_at_gteq, :class => "form-control datetimepicker-input", :placeholder => "Trip Created at greater than or equal to", :data => {:target => '#tripgteqcreated_atPicker'} %>
-          <div class="input-group-append" data-target='#tripgteqcreated_atPicker' data-toggle="datetimepicker">
-            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-          </div>
-        </div>
-      </div>
-
-      <div class='col-md-6'>
-        <div class='input-group date' id='triplteqcreated_atPicker' data-target-input="nearest">
-          <%= f.text_field :trip_created_at_lteq, :class => "form-control datetimepicker-input", :placeholder => "Trip Created at less than or equal to", :data => {:target => '#triplteqcreated_atPicker'} %>
-          <div class="input-group-append" data-target='#triplteqcreated_atPicker' data-toggle="datetimepicker">
-            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= f.label :trip_name_cont, "Trip name contains" %>
+    <%= f.text_field :trip_name_cont, :class => "form-control", :placeholder => "Trip name contains" %>
   </div>
-  <script type="text/javascript">
-      $(function () {
-          $('#tripgteqcreated_atPicker').datetimepicker({
-              format: 'YYYY-MM-DD hh:mm:SS'
-          });
-          $('#triplteqcreated_atPicker').datetimepicker({
-              useCurrent: false,
-              format: 'YYYY-MM-DD hh:mm:SS'
-          });
-          $('#tripgteqcreated_atPicker').on("dp.change", function (e) {
-              $('#triplteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
-          });
-          $('#triplteqcreated_atPicker').on("dp.change", function (e) {
-              $('#tripgteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
-          });
-      });
-  </script>
 
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
