--- a/app/views/users/_user_trips_new_form.html.erb
+++ b/app/views/users/_user_trips_new_form.html.erb
@@ -9,7 +9,7 @@
   <div class="form-group">
     <%= f.label :end_date %>
 
-    <%= f.text_field :end_date, class: "form-control" %>
+    <%= f.date_select :end_date, class: "form-control" %>
   </div>
 
   <div class="form-group">
