--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,12 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
+    <%= render partial: "users/user_available_days" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
     <%= render partial: "users/user_activities" %>
   </div>
 </div>
