--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -102,7 +102,7 @@
     <% end %>
 
     <%= f.label :description %>
-    <%= f.text_field :description, class: description_class, placeholder: "Enter description" %>
+    <%= f.text_area :description, class: description_class, placeholder: "Enter description" %>
     <% if description_was_invalid %>
       <% activity.errors.full_messages_for(:description).each do |message| %>
         <div class="invalid-feedback d-flex">
