--- a/app/views/trips/_trip_activities_new_form.html.erb
+++ b/app/views/trips/_trip_activities_new_form.html.erb
@@ -22,8 +22,7 @@
 
   <div class="form-group">
     <%= f.label :description %>
-
-    <%= f.text_field :description, class: "form-control" %>
+    <%= f.text_area :description, rows: "3", class: "form-control" %>
   </div>
 
   <div class="form-group">
